--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@
   src: url("../fonts/MinionPro-BoldIt.woff2") format("woff2"), url("../fonts/MinionPro-BoldIt.woff") format("woff"), url("../fonts/MinionPro-BoldIt.ttf") format("truetype"), url("../fonts/MinionPro-BoldIt.svg#MinionPro-BoldIt") format("svg"), url("../fonts/MinionPro-BoldIt.eot?#iefix") format("embedded-opentype");
   font-weight: normal;
   font-style: normal; }
-body #content #left-content, body nav ul li, body nav ul li a {
+body #content #left-content, body #content.open nav, body nav ul li, body nav ul li a {
   transition: .4s all linear; }
 
 * {
@@ -85,6 +85,12 @@ body #content {
   body #content.open #left-content {
     opacity: 1;
     visibility: visible; }
+  @media (max-width: 1620px) {
+    body #content.open nav {
+      margin-left: 120px; } }
+  @media (max-width: 1500px) {
+    body #content.open nav {
+      margin-left: 50px; } }
 body .overflow {
   overflow: scroll;
   max-height: 100%;
@@ -94,12 +100,22 @@ body .header-image {
   background: url("../img/left-image.png") center center no-repeat;
   width: 100%;
   height: 336px; }
+  @media (max-width: 1620px) {
+    body .header-image {
+      height: 300px;
+      background-position: center bottom; } }
+  @media (max-width: 1500px) {
+    body .header-image {
+      height: 250px; } }
 body .content {
   max-width: 440px;
   height: 60%;
   margin-left: auto;
   margin-right: auto;
   display: none; }
+  @media (max-width: 1500px) {
+    body .content {
+      max-width: 340px; } }
 body h1 {
   padding-top: 245px;
   font-size: 107px;
@@ -113,16 +129,26 @@ body h1 {
     body h1 {
       font-size: 85px;
       padding-top: 180px; } }
+  @media (max-width: 1400px) {
+    body h1 {
+      font-size: 70px;
+      padding-top: 150px; } }
+  @media (max-width: 1200px) {
+    body h1 {
+      font-size: 60px;
+      padding-top: 120px;
+      margin-bottom: 40px; } }
 body nav {
   margin-left: 45px; }
-  @media (max-width: 1620px) {
-    body nav {
-      margin-left: 120px; } }
   body nav ul li {
     font-family: "MinionPro-BoldIt", "sans-serif", "Arial";
     font-size: 30px;
     display: block;
     margin-bottom: 30px; }
+    @media (max-width: 1500px) {
+      body nav ul li {
+        margin-bottom: 20px;
+        font-size: 20px; } }
     body nav ul li a {
       color: #032637; }
       body nav ul li a:hover {
@@ -132,6 +158,9 @@ body nav {
         font-weight: 400; }
     body nav ul li.active {
       margin-left: -150px; }
+      @media (max-width: 1500px) {
+        body nav ul li.active {
+          margin-left: -50px; } }
       body nav ul li.active a {
         color: #d0b502;
         font-family: "MinionPro-Regular", "sans-serif", "Arial"; }
@@ -144,5 +173,8 @@ body p {
   font-size: 14px;
   color: #ffffff;
   padding-bottom: 20px; }
+  @media (max-width: 1400px) {
+    body p {
+      font-size: 12px; } }
 
 /*# sourceMappingURL=style.css.map */
