--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -134,6 +134,15 @@ body {
 				opacity: 1;
 				visibility: visible;
 			}
+			nav {
+				@extend %transition;
+				@media(max-width: 1620px) {
+					margin-left: 120px;
+				}
+				@media(max-width: 1500px) {
+					margin-left: 50px;
+				}
+			}
 		}
 	}
 	.overflow {
@@ -146,6 +155,13 @@ body {
 		background: url('../img/left-image.png') center center no-repeat;
 		width: 100%;
 		height: 336px;
+		@media(max-width: 1620px) {
+			height: 300px;
+			background-position: center bottom;
+		}
+		@media(max-width: 1500px) {
+			height: 250px;
+		}
 	}
 	.content {
 		max-width: 440px;
@@ -153,6 +169,9 @@ body {
 		margin-left: auto;
 		margin-right: auto;
 		display: none;
+		@media(max-width: 1500px) {
+			max-width: 340px;
+		}
 	}
 	h1 {
 		padding-top: 245px;
@@ -167,12 +186,18 @@ body {
 			font-size: 85px;
 			padding-top: 180px;
 		}
+		@media(max-width: 1400px) {
+			font-size: 70px;
+			padding-top: 150px;
+		}
+		@media(max-width: 1200px) {
+			font-size: 60px;
+			padding-top: 120px;
+			margin-bottom: 40px;
+		}
 	}
 	nav {
 		margin-left: 45px;
-		@media(max-width: 1620px) {
-			margin-left: 120px;
-		}
 		ul {
 			li {
 				font-family: $MinionPro-Bold;
@@ -180,6 +205,10 @@ body {
 				display: block;
 				margin-bottom: 30px;
 				@extend %transition;
+				@media(max-width: 1500px) {
+					margin-bottom: 20px;
+					font-size: 20px;
+				}
 				a {
 					color: $blue;
 					@extend %transition;
@@ -192,6 +221,9 @@ body {
 				}
 				&.active {
 					margin-left: -150px;
+					@media(max-width: 1500px) {
+						margin-left: -50px;
+					}
 					a {
 						color: $yellow;
 						font-family: $MinionPro;
@@ -211,5 +243,8 @@ body {
 		font-size: 14px;
 		color: $white;
 		padding-bottom: 20px;
+		@media(max-width: 1400px) {
+			font-size: 12px;
+		}
 	}
 }
